istio-resources/application-set/inbound-traffic/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
spec:
  host: '*'
  subsets:
  - name: canary  
    labels:        
      version: v1
  - name: stable 
    labels:        
      version: v2
